--- a/.github/workflows/elastictest_addls.yml
+++ b/.github/workflows/elastictest_addls.yml
@@ -52,12 +52,16 @@ jobs:
         with:
           python-version: '3.8'
       - run: |
+          echo "export http_proxy=http://proxy.acme.org:8888/" >>~/.bash_profile
+          source ~/.bash_profile
+          echo $http_proxy
           echo "install esrally"
           sudo pip3 install esrally
+          sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
           esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
-          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          for i in {1..18}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           sudo ls -l /data/jfs/
           sudo ls -la ~/
           sudo ls -la /tmp/
