--- a/.github/workflows/elastictest_cleanlog.yml
+++ b/.github/workflows/elastictest_cleanlog.yml
@@ -53,6 +53,7 @@ jobs:
           python-version: '3.8'
       - run: |
           sudo pip3 install esrally
+          sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
+          esrally race --track=geopoint  --car-params="data_paths:'/data/jfs'" &
           for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
