--- a/.github/workflows/elastictest_cleanlog_http.yml
+++ b/.github/workflows/elastictest_cleanlog_http.yml
@@ -14,7 +14,7 @@ on:
 
 
 jobs:
-  elastictest:
+  elastictest_cleanlog_http:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -55,11 +55,8 @@ jobs:
           echo "export http_proxy=http://proxy.acme.org:8888/" >>~/.bash_profile
           source ~/.bash_profile
           echo $http_proxy
-          echo "install esrally"
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          sudo ls -l /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
+          esrally race --track=geopoint  --car-params="data_paths:'/data/jfs'" &
           for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
-          sudo ls -l /data/jfs/
