three version compare

--- a/.github/workflows/elastictest_catlog.yml
+++ b/.github/workflows/elastictest_catlog.yml
@@ -55,6 +55,6 @@ jobs:
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
+          esrally race --track=geopoint --distribution-version=7.0.0 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
           for i in {1..18}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           cat /tmp/report.md
