--- a/.github/workflows/elastictest_addls.yml
+++ b/.github/workflows/elastictest_addls.yml
@@ -48,16 +48,19 @@ jobs:
 
 
       - name: Esrally
-        uses: actions/setup-python@v2
+      - uses: actions/setup-java@v2
         with:
-          python-version: '3.8'
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - run: |
+          echo "JAVA_HOME"
+          echo "$JAVA_HOME"
           echo "install esrally"
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.0.0 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
+          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
           for i in {1..18}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           sudo ls -l /data/jfs/
           sudo ls -la ~/
