--- a/.github/workflows/elastictest_catlog_http.yml
+++ b/.github/workflows/elastictest_catlog_http.yml
@@ -48,13 +48,10 @@ jobs:
 
 
       - name: Esrally
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-      - run: |
+        run: |
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --distribution-version=7.4.2 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
+          esrally race --track=geopoint --client-options="timeout:120" --distribution-version=6.7.0 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
           for i in {1..18}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           cat /tmp/report.md
