--- a/.github/workflows/elastictest_other_http.yml
+++ b/.github/workflows/elastictest_other_http.yml
@@ -14,7 +14,7 @@ on:
 
 
 jobs:
-  elastictest_cleanlog:
+  elastictest_other_http:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -52,10 +52,9 @@ jobs:
         with:
           python-version: '3.8'
       - run: |
-          echo "JAVA_HOME"
-          echo "$JAVA_HOME"
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --client-options="timeout:120" --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
+          esrally race --track=geopoint --client-options="timeout:120" --distribution-version=6.7.0 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
           for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          cat /tmp/report.md
