--- a/.github/workflows/elastictest_cleanlog_http.yml
+++ b/.github/workflows/elastictest_cleanlog_http.yml
@@ -48,13 +48,13 @@ jobs:
 
 
       - name: Esrally
-        uses: actions/setup-python@v2
+        uses: actions/setup-java@v2
         with:
-          python-version: '3.8'
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '17'
       - run: |
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint  --distribution-version=6.7.0 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
-          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv
           cat /tmp/report.md
