--- a/.github/workflows/elastictest_catlog.yml
+++ b/.github/workflows/elastictest_catlog.yml
@@ -57,5 +57,5 @@ jobs:
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
           esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
-          for i in {1..10}; do sleep 10m;echo "num $i";cat ~/.rally/logs/rally.log;curl -XGET 'http://localhost:39200';done
+          for i in {1..10}; do sleep 10m;echo "num $i";cat ~/.rally/logs/rally.log;done
           cat /tmp/report.md
