--- a/.github/workflows/elastictest_catlog.yml
+++ b/.github/workflows/elastictest_catlog.yml
@@ -47,6 +47,9 @@ jobs:
           sudo ./juicefs mount -d redis://127.0.0.1:6379/1 /data/jfs &
 
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Esrally
         uses: actions/setup-java@v2
         with:
@@ -56,6 +59,5 @@ jobs:
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
-          for i in {1..10}; do sleep 10m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv
           cat /tmp/report.md
