--- a/.github/workflows/elastictest_catlog_http.yml
+++ b/.github/workflows/elastictest_catlog_http.yml
@@ -47,9 +47,6 @@ jobs:
           sudo ./juicefs mount -d redis://127.0.0.1:6379/1 /data/jfs &
 
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-
       - name: Esrally
         uses: actions/setup-java@v2
         with:
@@ -59,5 +56,6 @@ jobs:
           sudo pip3 install esrally
           sudo apt-get install pbzip2
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --client-options="timeout:120" --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv
+          esrally race --track=geopoint --client-options="timeout:120" --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
+          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           cat /tmp/report.md
