1. support multi-bucket mode of s3 gateway 2. support list object with recursive 3. add s3gateway test 4. add license information

--- a/integration/Makefile
+++ b/integration/Makefile
@@ -1,6 +1,6 @@
 DURATION ?= 10
 
-all: xattrs fsx
+all: xattrs fsx s3test
 
 
 xattrs:
@@ -22,3 +22,6 @@ secfs.test:
 	git clone https://github.com/billziss-gh/secfs.test.git
 	make -C secfs.test >secfs.test-build-integration.log 2>&1
 
+s3test:
+	pip install awscli --upgrade
+	bash s3gateway_test.sh
