--- a/.github/workflows/elastictest_cleanlog_http.yml
+++ b/.github/workflows/elastictest_cleanlog_http.yml
@@ -47,15 +47,35 @@ jobs:
           sudo ./juicefs mount -d redis://127.0.0.1:6379/1 /data/jfs &
 
 
-      - name: Esrally
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '17'
-      - run: |
+      - name: Install Elasticsearch
+        run: |
+          wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
+          sudo apt-get install apt-transport-https
+          sudo sh -c 'echo "deb https://artifacts.elastic.co/packages/7.x/apt stable main" > /etc/apt/sources.list.d/elastic-7.x.list'
+          sudo apt-get update
+          sudo apt-get install -y elasticsearch
+
+      - name: Change Datadir
+        run: |
+          sudo chmod 777 /data/jfs/
+          sudo service elasticsearch stop
+          sudo cat /etc/elasticsearch/elasticsearch.yml
+          sudo sed  -i "s?^path\.data.*?path\.data: /data/jfs/?" /etc/elasticsearch/elasticsearch.yml
+          sudo cat /etc/elasticsearch/elasticsearch.yml
+          sudo service elasticsearch restart
+          sudo ls -l /data/jfs/
+          sudo service elasticsearch status
+          curl -X GET "localhost:9200/"
+
+      - name: Esrally Test
+        run: |
+          echo "JAVA_HOME"
+          echo "$JAVA_HOME"
+          echo "install esrally"
           sudo pip3 install esrally
           sudo apt-get install pbzip2
-          sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md &
-          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          sudo ls -l /data/jfs/
+          esrally race --track=geopoint --target-hosts=127.0.0.1:9200 --pipeline=benchmark-only --report-file=/tmp/report.md &
+          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;sudo ls -l /data/jfs;done
+          sudo ls -l /data/jfs/
           cat /tmp/report.md
