--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -60,16 +60,11 @@ jobs:
           sudo service elasticsearch stop
           sudo sed  -i "s?^path\.data.*?path\.data: /data/jfs/?" /etc/elasticsearch/elasticsearch.yml
           sudo service elasticsearch restart
-          sudo ls -l /data/jfs/
-          sudo service elasticsearch status
           curl -X GET "localhost:9200/"
 
       - name: Esrally Test
         run: |
           sudo pip3 install esrally
           sudo apt-get install pbzip2
-          sudo ls -l /data/jfs/
-          esrally race --track=geopoint --target-hosts=127.0.0.1:9200 --pipeline=benchmark-only --report-file=/tmp/report.md &
-          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;sudo ls -l /data/jfs;done
-          sudo ls -l /data/jfs/
+          esrally race --track=geopoint --target-hosts=127.0.0.1:9200 --pipeline=benchmark-only --report-file=/tmp/report.md
           cat /tmp/report.md
