--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -3,12 +3,14 @@ name: "elastictest"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches:
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
 
