modify java sdk

--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: '8'
 
       - name: Set up Spark
