--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -9,10 +9,6 @@ jobs:
   tpcds:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
 
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -25,28 +21,46 @@ jobs:
           distribution: 'adopt'
           java-version: '8'
 
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: Build linux target
+        run: make juicefs
+
+      - name: Build Hadoop SDK
+        run: make -C sdk/java
+
+      - name: Juicefs Format
+        run: |
+          sudo ./juicefs format memkv:// dev --trash-days 0
+
       - name: Set up Spark
         run: |
           wget https://dlcdn.apache.org/spark/spark-3.0.3/spark-3.0.3-bin-hadoop2.7.tgz
           tar -zxf spark-3.0.3-bin-hadoop2.7.tgz
+          ln -s spark-3.0.3-bin-hadoop2.7 spark
+          cp juicefs/sdk/java/target/juicefs-hadoop*jar spark/jars
+          echo $PWD
 
-      - name: Set up tpcds-kit
-        run: |
-          sudo apt-get install gcc make flex bison byacc git
-          git clone --depth 1 https://github.com/databricks/tpcds-kit.git
-          cd tpcds-kit/tools
-          make OS=LINUX
-
-      - name: Set up spark-sql-perf
-        run: |
-          sudo apt-get update
-          sudo apt-get install apt-transport-https curl gnupg -yqq
-          echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
-          echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
-          curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import
-          sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
-          sudo apt-get update
-          sudo apt-get install sbt
-          git clone --depth 1 https://github.com/databricks/spark-sql-perf.git
-          cd spark-sql-perf
-          sbt package
+#      - name: Set up tpcds-kit
+#        run: |
+#          sudo apt-get install gcc make flex bison byacc git
+#          git clone --depth 1 https://github.com/databricks/tpcds-kit.git
+#          cd tpcds-kit/tools
+#          make OS=LINUX
+#
+#      - name: Set up spark-sql-perf
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install apt-transport-https curl gnupg -yqq
+#          echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
+#          echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
+#          curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import
+#          sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
+#          sudo apt-get update
+#          sudo apt-get install sbt
+#          git clone --depth 1 https://github.com/databricks/spark-sql-perf.git
+#          cd spark-sql-perf
+#          sbt package
