--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -64,6 +64,7 @@ jobs:
           sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
           sudo apt-get update
           sudo apt-get install sbt
+          mkdir ~/.sbt
           cat > ~/.sbt/repositories <<EOF
           [repositories]
           local
