--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -72,4 +72,5 @@ jobs:
           EOF
           git clone --depth 1 https://github.com/databricks/spark-sql-perf.git
           cd spark-sql-perf
+          sed -i 's/sbt.version=.*/sbt.version=1.5.6/'  project/build.properties
           sbt package
