--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -8,6 +8,18 @@ on:
 jobs:
   tpcds:
     runs-on: ubuntu-latest
+
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+
     steps:
       - run: sudo swapoff -a
 
@@ -35,7 +47,7 @@ jobs:
 
       - name: Juicefs Format
         run: |
-          sudo ./juicefs format memkv:// dev --trash-days 0 --bucket /mnt/jfs
+          sudo ./juicefs format redis://127.0.0.1:6379/1 dev --trash-days 0 --bucket /mnt/jfs
           sudo chmod -R 777 /mnt/jfs/dev/
 
       - name: Set up Spark
