--- a/.github/workflows/ltpsyscallstail.yml
+++ b/.github/workflows/ltpsyscallstail.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     #The branches below must be a subset of the branches above
     branches:
-      - 'release-**'
+      - 'main'
     paths-ignore:
       - 'docs/**'
 
@@ -65,3 +65,7 @@ jobs:
           sudo tail -n 500 runtest/syscalls > runtest/syscallstail
           sudo chmod 777 runtest/syscallstail
           sudo ./runltp -d /tmp/jfs -f syscallstail -C result.log.failed -T result.log.tconf -l result.log
+
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
