--- a/.github/workflows/tpcds.yml
+++ b/.github/workflows/tpcds.yml
@@ -110,6 +110,7 @@ jobs:
           -i ~/work/juicefs/juicefs/.github/workflows/resources/tpcds_datagen.scala
 
       - name: Run tpcds
+        timeout-minutes: 30
         working-directory: /tmp
         run: |
           spark-shell \
