--- a/.github/workflows/pjdfstest.yml
+++ b/.github/workflows/pjdfstest.yml
@@ -59,3 +59,7 @@ jobs:
           ./configure
           make pjdfstest
           sudo prove -rv tests/
+
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
