--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
     #The branches below must be a subset of the branches above
     branches:
-      - 'release-**'
+      - 'main'
     paths-ignore:
       - 'docs/**'
 
@@ -70,3 +70,7 @@ jobs:
           sudo apt-get install pbzip2
           esrally race --track=geopoint --target-hosts=127.0.0.1:9200 --pipeline=benchmark-only --report-file=/tmp/report.md
           cat /tmp/report.md
+
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
